--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@hyperionbt/helios": "^0.7.8",
     "daisyui": "^2.31.0",
     "easy-peasy": "^5.1.0",
-    "lucid-cardano": "^0.6.8",
     "next": "12.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "lucid-cardano": "^0.9.4"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
@@ -30,6 +30,6 @@
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "typescript": "4.9.5"
   }
 }
